<resources>
    <string name="action_print">Imprimir</string>
    <string name="action_settings">Configurações</string>
    <string name="app_name">Steve App</string>
    <string name="app_search">Pesquisa</string>
    <string name="configuracao_button_salvar_hint">SALVAR</string>
    <string name="configuracao_label_url_base_hint">http://IP:PORT/CONTEXT/</string>
    <string name="file_provider_authority" translatable="false">com.kinlhp.steve.provider</string>
    <string name="condicao_pagamento_cadastro_button_adicionar_hint">ADICIONAR</string>
    <string name="condicao_pagamento_cadastro_button_alterar_hint">ALTERAR</string>
    <string name="condicao_pagamento_cadastro_button_salvar_hint">SALVAR ALTERAÇÕES</string>
    <string name="condicao_pagamento_cadastro_label_descricao_hint">Descrição</string>
    <string name="condicao_pagamento_cadastro_label_periodo_entre_parcelas_hint">Período entre parcelas</string>
    <string name="condicao_pagamento_cadastro_label_quantidade_parcelas_hint">Quantidade de parcelas</string>
    <string name="condicao_pagamento_cadastro_titulo">Condição de Pagamento</string>
    <string name="condicoes_pagamento_pesquisa_label_0_registros_hint">0 registros</string>
    <string name="condicoes_pagamento_pesquisa_label_descricao_hint">@string/condicao_pagamento_cadastro_label_descricao_hint</string>
    <string name="condicoes_pagamento_pesquisa_label_periodo_entre_parcelas_hint">@string/condicao_pagamento_cadastro_label_periodo_entre_parcelas_hint</string>
    <string name="condicoes_pagamento_pesquisa_label_quantidade_parcelas_hint">@string/condicao_pagamento_cadastro_label_quantidade_parcelas_hint</string>
    <string name="condicoes_pagamento_pesquisa_titulo">Condições de Pagamento</string>
    <string name="conta_pagar_cadastro_button_gerar_hint">GERAR</string>
    <string name="conta_pagar_cadastro_button_salvar_hint">SALVAR ALTERAÇÕES</string>
    <string name="conta_pagar_cadastro_label_calendario_hint">Calendário</string>
    <string name="conta_pagar_cadastro_label_cedente_hint">Cedente</string>
    <string name="conta_pagar_cadastro_label_condicao_pagamento_hint">Condição de Pagamento</string>
    <string name="conta_pagar_cadastro_label_data_emissao_hint">Data de emissão</string>
    <string name="conta_pagar_cadastro_label_data_vencimento_hint">Data de vencimento</string>
    <string name="conta_pagar_cadastro_label_fatura_hint">Fatura</string>
    <string name="conta_pagar_cadastro_label_forma_pagamento_hint">Forma de Pagamento</string>
    <string name="conta_pagar_cadastro_label_id_hint">Código</string>
    <string name="conta_pagar_cadastro_label_mes_referente_hint">Mês referente</string>
    <string name="conta_pagar_cadastro_label_nenhum_cedente_hint">Pesquisar cedentes</string>
    <string name="conta_pagar_cadastro_label_numero_parcela_hint">Número da parcela</string>
    <string name="conta_pagar_cadastro_label_observacao_hint">Observação</string>
    <string name="conta_pagar_cadastro_label_valor_hint">Valor</string>
    <string name="conta_pagar_cadastro_mensagem_cedente_nao_fornecedor_nao_transportador">Sem perfil fornecedor/transportador</string>
    <string name="conta_pagar_cadastro_titulo">Conta a Pagar</string>
    <string name="contas_pagar_pesquisa_label_0_registros_hint">0 registros</string>
    <string name="contas_pagar_pesquisa_label_condicao_pagamento_hint">@string/conta_pagar_cadastro_label_condicao_pagamento_hint</string>
    <string name="contas_pagar_pesquisa_label_data_vencimento_hint">Data de vencimento</string>
    <string name="contas_pagar_pesquisa_label_forma_pagamento_hint">@string/conta_pagar_cadastro_label_forma_pagamento_hint</string>
    <string name="contas_pagar_pesquisa_label_montante_pago_hint">Montante pago</string>
    <string name="contas_pagar_pesquisa_label_numero_parcela_hint">Número parcela</string>
    <string name="contas_pagar_pesquisa_label_cedente_hint">@string/conta_pagar_cadastro_label_cedente_hint</string>
    <string name="contas_pagar_pesquisa_label_saldo_devedor_hint">Saldo devedor</string>
    <string name="contas_pagar_pesquisa_label_valor_hint">Valor</string>
    <string name="contas_pagar_pesquisa_titulo">Contas a Pagar</string>
    <string name="conta_receber_cadastro_button_gerar_hint">GERAR</string>
    <string name="conta_receber_cadastro_input_parcelas_text">Visualizar parcelas</string>
    <string name="conta_receber_cadastro_label_condicao_pagamento_hint">Condição de Pagamento</string>
    <string name="conta_receber_cadastro_label_forma_pagamento_hint">Forma de Pagamento</string>
    <string name="conta_receber_cadastro_label_id_hint">Código</string>
    <string name="conta_receber_cadastro_label_nenhum_condicao_pagamento_hint">Pesquisar condições de pagamento</string>
    <string name="conta_receber_cadastro_label_nenhum_forma_pagamento_hint">Pesquisar formas de pagamento</string>
    <string name="conta_receber_cadastro_label_nenhum_ordem_hint">Pesquisar ordens</string>
    <string name="conta_receber_cadastro_label_nenhum_parcela_hint">Nenhuma parcela</string>
    <string name="conta_receber_cadastro_label_nenhum_sacado_hint">Pesquisar sacados</string>
    <string name="conta_receber_cadastro_label_ordem_hint">Ordem</string>
    <string name="conta_receber_cadastro_label_parcelas_hint">Parcelas</string>
    <string name="conta_receber_cadastro_label_sacado_hint">Sacado</string>
    <string name="conta_receber_cadastro_mensagem_ordem_nao_finalizado">Situação não \'Finalizado\'</string>
    <string name="conta_receber_cadastro_mensagem_sacado_nao_cliente">Sem perfil cliente</string>
    <string name="conta_receber_cadastro_titulo">Conta a Receber</string>
    <string name="contas_receber_pesquisa_label_0_registros_hint">0 registros</string>
    <string name="contas_receber_pesquisa_label_condicao_pagamento_hint">@string/conta_receber_cadastro_label_condicao_pagamento_hint</string>
    <string name="contas_receber_pesquisa_label_data_vencimento_hint">Data de vencimento</string>
    <string name="contas_receber_pesquisa_label_forma_pagamento_hint">@string/conta_receber_cadastro_label_forma_pagamento_hint</string>
    <string name="contas_receber_pesquisa_label_montante_pago_hint">Montante pago</string>
    <string name="contas_receber_pesquisa_label_numero_parcela_hint">Número parcela</string>
    <string name="contas_receber_pesquisa_label_sacado_hint">@string/conta_receber_cadastro_label_sacado_hint</string>
    <string name="contas_receber_pesquisa_label_saldo_devedor_hint">Saldo devedor</string>
    <string name="contas_receber_pesquisa_label_valor_hint">Valor</string>
    <string name="contas_receber_pesquisa_titulo">Contas a Receber</string>
    <string name="credenciais_pesquisa_label_0_registros_hint">0 registros</string>
    <string name="credenciais_pesquisa_label_funcionario_hint">@string/credencial_cadastro_label_funcionario_hint</string>
    <string name="credenciais_pesquisa_label_perfis_hint">Perfis</string>
    <string name="credenciais_pesquisa_label_usuario_hint">@string/credencial_cadastro_label_usuario_hint</string>
    <string name="credenciais_pesquisa_titulo">Credenciais</string>
    <string name="credencial_cadastro_button_adicionar_hint">ADICIONAR</string>
    <string name="credencial_cadastro_button_alterar_hint">ALTERAR</string>
    <string name="credencial_cadastro_button_salvar_hint">SALVAR ALTERAÇÕES</string>
    <string name="credencial_cadastro_label_confirmacao_senha_hint">Confirmação de senha</string>
    <string name="credencial_cadastro_label_funcionario_hint">Funcionário</string>
    <string name="credencial_cadastro_label_id_hint">Código</string>
    <string name="credencial_cadastro_label_nenhum_funcionario_hint">Pesquisar funcionários</string>
    <string name="credencial_cadastro_label_senha_hint">Senha</string>
    <string name="credencial_cadastro_label_usuario_hint">Usuário</string>
    <string name="credencial_cadastro_mensagem_funcionario_nao_usuario">Sem perfil de usuário</string>
    <string name="credencial_cadastro_switch_perfil_administrador_hint">Perfil administrador</string>
    <string name="credencial_cadastro_switch_situacao_hint">Ativo</string>
    <string name="credencial_cadastro_titulo">Credecial</string>
    <string name="dashboard_abrir">Abrir dashboard</string>
    <string name="dashboard_fechar">Fechar dashboard</string>
    <string name="dashboard_header_email">@string/suporte_label_email_contato</string>
    <string name="dashboard_header_descricao_imagem">@string/app_name</string>
    <string name="dashboard_item_gerenciamento">Gerenciamento</string>
    <string name="dashboard_item_lancamento">Lançamento</string>
    <string name="dashboard_item_segurança">Segurança</string>
    <string name="dashboard_subitem_condicao_pagamento">Condição de pagamento</string>
    <string name="dashboard_subitem_conta_pagar_lancamento">Conta a pagar (lançamento)</string>
    <string name="dashboard_subitem_conta_pagar_pagamento">Conta a pagar (pagamento)</string>
    <string name="dashboard_subitem_conta_receber_lancamento">Conta a receber (lançamento)</string>
    <string name="dashboard_subitem_conta_receber_recebimento">Conta a receber (recebimento)</string>
    <string name="dashboard_subitem_credencial">Credencial</string>
    <string name="dashboard_subitem_forma_pagamento">Forma de pagamento</string>
    <string name="dashboard_subitem_ordem_servico">Ordem de serviço</string>
    <string name="dashboard_subitem_pessoa">Pessoa</string>
    <string name="dashboard_subitem_relatorio">Relatório</string>
    <string name="dashboard_subitem_senha">Alterar senha</string>
    <string name="dashboard_subitem_servico">Serviço</string>
    <string name="dashboard_titulo">Dashboard</string>
    <string name="email_cadastro_button_adicionar_hint">ADICIONAR</string>
    <string name="email_cadastro_button_alterar_hint">ALTERAR</string>
    <string name="email_cadastro_button_salvar_hint">SALVAR ALTERAÇÕES</string>
    <string name="email_cadastro_label_endereco_eletronico_hint">Endereço eletrônico</string>
    <string name="email_cadastro_label_nome_contato_hint">Nome do contato</string>
    <string name="email_cadastro_label_tipo_hint">Tipo</string>
    <string name="email_cadastro_titulo">E-mail</string>
    <string name="emails_pesquisa_label_0_registros_hint">0 registros</string>
    <string name="emails_pesquisa_label_endereco_eletronico_hint">@string/email_cadastro_label_endereco_eletronico_hint</string>
    <string name="emails_pesquisa_label_nome_contato_hint">@string/email_cadastro_label_nome_contato_hint</string>
    <string name="emails_pesquisa_label_tipo_hint">@string/email_cadastro_label_tipo_hint</string>
    <string name="emails_pesquisa_titulo">E-mails</string>
    <string name="endereco_cadastro_button_adicionar_hint">ADICIONAR</string>
    <string name="endereco_cadastro_button_alterar_hint">ALTERAR</string>
    <string name="endereco_cadastro_button_salvar_hint">SALVAR ALTERAÇÕES</string>
    <string name="endereco_cadastro_label_bairro_hint">Bairro</string>
    <string name="endereco_cadastro_label_cep_hint">CEP</string>
    <string name="endereco_cadastro_label_cidade_hint">Cidade</string>
    <string name="endereco_cadastro_label_complemento_hint">Complemento</string>
    <string name="endereco_cadastro_label_complemento2_hint">Outro complemento</string>
    <string name="itens_ordem_servico_pesquisa_label_descricao_hint">@string/item_ordem_servico_cadastro_label_descricao_hint</string>
    <string name="itens_ordem_servico_pesquisa_label_servico_hint">@string/item_ordem_servico_cadastro_label_servico_hint</string>
    <string name="itens_ordem_servico_pesquisa_label_situacao_hint">@string/item_ordem_servico_cadastro_label_situacao_hint</string>
    <string name="itens_ordem_servico_pesquisa_label_valor_orcamento_hint">Valor do orçamento </string>
    <string name="itens_ordem_servico_pesquisa_label_valor_servico_hint">Valor aplicado </string>
</resources>