<?xml version="1.0" encoding="utf-8"?><!-- @layout/view_lista_itens_ordem_servico.xml -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_lista_itens_ordem_servico"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/label_situacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/list_margin"
        android:layout_marginLeft="@dimen/list_margin"
        android:layout_marginRight="@dimen/list_margin"
        android:layout_marginStart="@dimen/list_margin"
        android:layout_marginTop="@dimen/list_margin"
        android:hint="@string/itens_ordem_servico_pesquisa_label_situacao_hint"
        android:textSize="@dimen/list_title_textSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/label_servico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/list_margin"
        android:layout_marginLeft="@dimen/list_margin"
        android:layout_marginRight="@dimen/list_margin"
        android:layout_marginStart="@dimen/list_margin"
        android:hint="@string/itens_ordem_servico_pesquisa_label_servico_hint"
        android:textSize="@dimen/list_content_textSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_situacao" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_remover_item_ordem_servico"
        android:layout_width="@dimen/round_button_small_width"
        android:layout_height="@dimen/round_button_small_height"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:background="@drawable/layout_componente_arredondado_transparente"
        app:layout_constraintBottom_toBottomOf="@id/label_servico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_servico"
        app:srcCompat="@drawable/ic_lixeira_tomato_24dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/label_valor_orcamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/list_margin"
        android:layout_marginLeft="@dimen/list_margin"
        android:layout_marginRight="@dimen/list_margin"
        android:layout_marginStart="@dimen/list_margin"
        android:hint="@string/itens_ordem_servico_pesquisa_label_valor_orcamento_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_servico" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/label_valor_servico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/list_margin"
        android:layout_marginLeft="@dimen/list_margin"
        android:layout_marginRight="@dimen/list_margin"
        android:layout_marginStart="@dimen/list_margin"
        android:hint="@string/itens_ordem_servico_pesquisa_label_valor_servico_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_valor_orcamento" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/label_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/list_margin"
        android:layout_marginLeft="@dimen/list_margin"
        android:layout_marginRight="@dimen/list_margin"
        android:layout_marginStart="@dimen/list_margin"
        android:hint="@string/itens_ordem_servico_pesquisa_label_descricao_hint"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_valor_servico" />

    <View
        android:id="@+id/divider_item_ordem_servico"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_divider_height"
        android:layout_marginTop="@dimen/list_margin"
        android:background="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_descricao" />
</android.support.constraint.ConstraintLayout>
